--- a/main.ipynb
+++ b/main.ipynb
@@ -29,15 +29,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "fmin = 700  #N\n",
     "fmax = 1000 #N\n",
-    "\n",
+    "y = 25      #mm \n",
     "n = 500     #rpm\n",
     "nf = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C: Índice da mola                                                  \n",
+    "D: Diâmetro maior                                                  \n",
+    "d: Diâmetro menor                                                  \n",
+    "\n",
+    "$ 4 \\leq C \\leq 12 $\n",
+    "\n",
+    "$$ C = \\frac{D}{d} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def C(D, d):\n",
+    "    return D/d"
    ]
   }
  ],
@@ -48,7 +71,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
   "orig_nbformat": 4,
