--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supondo os valores iniciais de $C=9$ e $d=9$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +80,7 @@
        "81"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,21 +96,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ D = Cd = 81 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Valor apropriado da tensão inicial de espira $ \\tau_{i} $\n",
     "$$ \\tau_{i,1} = -4,231C^3 + 181,5C^2 - 3387C + 28640$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9774.101"
+       "(9774.101, 67.408)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +127,14 @@
     "def ti1(C):\n",
     "    return round(-4.231*(C**3) + 181.5*(C**2) - 3387*C + 28640, 3)\n",
     "\n",
-    "ti1(C)   "
+    "ti1(C), round(ti1(C)/145, 3) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{i,1} = 9774,101 psi \\approx 67,407 MPa $$"
    ]
   },
   {
@@ -124,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16699.177"
+       "(16699.177, 115.167)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +164,14 @@
     "def ti2(C):\n",
     "    return round(-2.987*(C**3) + 139.7*(C**2) - 3427*C + 38404, 3)\n",
     "\n",
-    "ti2(C)"
+    "ti2(C), round(ti2(C)/145, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{i, 2} = 16699,177 psi \\approx 115,167 MPa $$"
    ]
   },
   {
@@ -154,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26473.278"
+       "(26473.278, 182.574)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,19 +201,29 @@
     "def ti(C):\n",
     "    return ti1(C) + ti2(C)\n",
     "\n",
-    "ti(C)"
+    "ti_N = round(ti(C)/145, 3)   #Tensão em Newton\n",
+    "\n",
+    "ti(C), ti_N"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ \\tau_{i} = 26473,278 psi \\approx 182,574 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ K_{s} $: Fator de cisalhamento direto\n",
     "$$ K_{s} = 1 + \\frac{0,5}{C} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +232,7 @@
        "1.056"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,37 +248,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ F_{i} = \\frac{\\pi d^3 \\tau_{i}}{8K_{s}D} $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "88602.545"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def fi(C, d):\n",
-    "    return round(pi*ti(C)*(d**3)/(8*ks(C)*D(C, d)), 3)\n",
-    "\n",
-    "fi(C, d)"
+    "$$ K_{s} = 1,056 $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$ F_{a} = \\frac{F_{max} - F_{min}}{2} $$"
+    "$ F_{i} $: Força de tração inicial\n",
+    "$$ F_{i} = \\frac{\\pi d^3 \\tau_{i}}{8K_{s}D} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import pi"
    ]
   },
   {
@@ -250,10 +276,48 @@
     {
      "data": {
       "text/plain": [
-       "150.0"
+       "611.051"
       ]
      },
      "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fi(C, d):\n",
+    "    return round(pi*ti_N*(d**3)/(8*ks(C)*D(C, d)), 3)\n",
+    "\n",
+    "fi(C, d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ F_{i} = 611,051 N < F_{min}$. Não defletirá a mola."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ F_{a} $: Força alternada\n",
+    "$$ F_{a} = \\frac{F_{max} - F_{min}}{2} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150.0"
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,12 +333,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ F_{a} = 150 N $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ F_{m} $: Força média\n",
     "$$ F_{m} = \\frac{F_{max} + F_{min}}{2} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +355,7 @@
        "850.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,12 +371,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ F_{m} = 850 N $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ \\tau_{m} $: Tensão média\n",
     "$$ \\tau_{m} = K_{s} \\frac{8F_{m}D}{\\pi d^3} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +393,7 @@
        "253.969"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,6 +409,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ \\tau_{m} = 253,969 MPa $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ K_{w} $: Fator de Wahl\n",
     "$$ K_{w} = \\frac{4C - 1}{4C - 4} + \\frac{0.615}{C} $$"
    ]
   },
@@ -336,12 +424,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$ \\tau_{a} $: Tensão de cisalhamento alternada\n",
     "$$ \\tau_{a} = K_{w} \\frac{8F_{a}D}{\\pi d^3} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -350,14 +439,14 @@
        "49.32"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def kw(C):\n",
-    "    return (4*C - 1)/(4*C - 4) + (0.615)/C\n",
+    "    return ( (4*C - 1)/(4*C - 4) ) + (0.615)/C\n",
     "\n",
     "def ta(C):\n",
     "    return round(kw(C)*8*fa()*D(C, d)/(pi*d**3), 3)\n",
@@ -369,8 +458,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ \\tau_{a} = 49,32 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ S_{ut} $: Limite de resistência a tração\n",
     "$$ S_{ut} = A/d^m $$\n",
+    "$ S_{us} $: Limite de resistência a cisalhamento\n",
     "$$ S_{us} = 0,667S_{ut} $$\n",
+    "$ S_{ys} $: Limite de resistência a torção\n",
     "$$ S_{ys} = 0,45S_{ut} $$"
    ]
   },
@@ -384,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +492,7 @@
        "1354.643"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,8 +508,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ S_{ut} = 1354,643 MPa $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +525,7 @@
        "903.547"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,8 +538,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ S_{us} = 903,547 MPa $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +555,7 @@
        "609.589"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,12 +571,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ S_{ys} = 609,589 MPa$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ S_{es} $: limite de resistência à fadiga em condições alternadas\n",
     "$$ S_{es} = 0,5 \\frac{S_{ew}S_{us}}{S_{us} - 0,5S_{ew}} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +593,7 @@
        "187.285"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,6 +611,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ S_{es} = 187,285 MPa$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$N_{fs}$: Coeficiente de segurança para espiras em torção\n",
     "$$ N_{fs} = \\frac{S_{es}(S_{us} - \\tau_{min})}{S_{es}(\\tau_{m} - \\tau_{min}) + S_{us}\\tau_{a}} $$"
    ]
   },
@@ -497,32 +626,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$ \\tau_{min} $: Tensão de cisalhamento mínima \n",
     "$$ \\tau_{min} = K_{B} \\frac{8F_{min}D}{\\pi d^3} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tmin(fmin, C):\n",
     "    kb = (4*C + 2)/(4*C - 3)\n",
-    "    return kb*8*fmin*D(C, d)/((pi*d**3)*10**6)"
+    "    return kb*8*fmin*D(C, d)/(pi*d**3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8368108854793006"
+       "2.560159559287373"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,12 +668,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ N_{fs} = 2,56 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ C_{1} = \\frac{2R_{1}}{d} = \\frac{2D}{2d} = C $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,27 +689,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def kb():\n",
-    "    return 4*((C1()**2) - C1() - 1)/(4*C1()*(C1() - 1))"
+    "$$ K_{b} = \\frac{4C_1^2 - C_1 - 1}{4C_1(C_1 - 1)} $$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "86.062"
+       "0.986"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def kb():\n",
+    "    return round(4*((C1()**2) - C1() - 1)/(4*C1()*(C1() - 1)), 3)\n",
+    "\n",
+    "kb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ K_{b} = 0,986 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{a} = k_{b} \\frac{16D F_a}{\\pi d^3} + \\frac{4F_{a}}{\\pi d^2} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86.052"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,17 +756,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{a} = 86,052 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{m} = k_{b} \\frac{16D F_{m}}{\\pi d^3} + \\frac{4F_{m}}{\\pi d^2} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "487.682"
+       "487.629"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,17 +793,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{m} = 487,629 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{min} = k_{b} \\frac{16D F_{min}}{\\pi d^3} + \\frac{4F_{min}}{\\pi d^2} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "401.621"
+       "401.577"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +830,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\sigma_{min} = 401,577 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$S_{e}$: Resistência a endurança total\n",
+    "$$ S_{e} = \\frac{S_{es}}{0,67} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +855,7 @@
        "279.53"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,26 +868,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ S_{e} = 279,51 MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ N_{fb} = \\frac{S_{e}(S_{ut} - \\sigma_{min})}{S_{e}(\\sigma_{m} - \\sigma_{min}) + S_{ut}\\sigma_{a}} $$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8941865508121662"
+       "1.894"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def nfb():\n",
-    "    return se(A, m)*(sut(A, m) - smin())/(se(A, m)*(sm() - smin()) + sut(A, m)*sa())\n",
+    "    return round(se(A, m)*(sut(A, m) - smin())/(se(A, m)*(sm() - smin()) + sut(A, m)*sa()), 3)\n",
     "\n",
     "nfb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ N_{fb} = 1,894 $$"
    ]
   }
  ],
