--- a/main.ipynb
+++ b/main.ipynb
@@ -643,23 +643,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.560159559287373"
+       "2.56"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def nfs(A, m, C, d, fmin):\n",
-    "    return ses(A, m)*(sus(A, m) - tmin(fmin, C))/(ses(A, m)*(tm(C, d) - tmin(fmin, C)) + sus(A, m)*ta(C))\n",
+    "    return round(ses(A, m)*(sus(A, m) - tmin(fmin, C))/(ses(A, m)*(tm(C, d) - tmin(fmin, C)) + sus(A, m)*ta(C)), 3)\n",
     "\n",
     "nfs(A, m, C, d, fmin)"
    ]
@@ -909,6 +909,340 @@
    "metadata": {},
    "source": [
     "$$ N_{fb} = 1,894 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ R_{2} = \\frac{C_{2}d}{2} $$\n",
+    "Supondo inicialmente um valor de $C_{2} = 2$, temos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C2 = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22.5"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def r2():\n",
+    "    return round(C2*d/2, 3)\n",
+    "\n",
+    "r2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ R_{2} = 22.5 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ K_{w,2} = \\frac{4C_{2} - 1}{4C_{2} - 4} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.188"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def kw2():\n",
+    "    return round((4*C2 - 1)/(4*C2 - 4), 3)\n",
+    "\n",
+    "kw2()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ K_{w,2} = 1,188 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\tau_{B}$: Tensão de torção no gancho"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_a} = K_{w,2} \\frac{8D F_{a}}{\\pi d^3} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.42"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tba():\n",
+    "    return round(kw2()*8*D(C, d)*fa()/(pi*(d**3)), 3)\n",
+    "\n",
+    "tba()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_a} = 50,42MPa $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_m} = K_{w,2} \\frac{8D F_{m}}{\\pi d^3} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "285.715"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tbm():\n",
+    "    return round(kw2()*8*D(C, d)*fm()/(pi*(d**3)), 3)\n",
+    "\n",
+    "tbm()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_m} = 285,715 MPa$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_{min}} = K_{w,2} \\frac{8D F_{min}}{\\pi d^3} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "235.295"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tbmin():\n",
+    "    return round(kw2()*8*D(C, d)*fmin/(pi*(d**3)), 3)\n",
+    "\n",
+    "tbmin()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\tau_{B_{min}} = 235,295 MPa$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$N_{fs}$: coeficiente de segurança à fadiga\n",
+    "$$ N_{fs} = \\frac{S_{es}(S_{us} - \\tau_{min})}{S_{es}(\\tau_{m} - \\tau_{min}) + S_{us} \\tau_{a}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49.32"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ta(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.56"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def nfsb():\n",
+    "    return round(ses(A, m)*(sus(A, m) - tmin(fmin, C))/( ses(A, m)*(tm(C, d) - tmin(fmin, C)) + sus(A, m)*ta(C) ), 3)\n",
+    "\n",
+    "\n",
+    "nfsb()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ N_{fs_{B}} = 2,56 $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$k$: constante da mola\n",
+    "$$ k = \\frac{\\Delta F}{y} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def k():\n",
+    "    return (fmax - fmin)/y\n",
+    "\n",
+    "k()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ k = 12 N/mm$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$N_{a}$: número de espiras ativas                                                                                                                      \n",
+    "$G$: Módulo de elasticidade transversal\n",
+    "$$ N_{a} = \\frac{d^4 G}{8 D^3 k} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.8"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def na():\n",
+    "    E = 193*10**3   #MPa\n",
+    "    v = 0.265       #coef de poisson\n",
+    "    G = E/(2*(1+v))\n",
+    "    return round((d**4)*G/(8*k()*(D(C, d)**3)), 1)\n",
+    "\n",
+    "na()"
    ]
   }
  ],
