--- a/main.ipynb
+++ b/main.ipynb
@@ -1767,7 +1767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pra o problema proposto a solução encontrada foi supondo valores iniciais de indice de mola e o diâmetro da espira, assim encontrando as dimensões faltantes dado o material escolhido, e com essas condições, chegamos a fatores de projeto para torção, flexão e fadiga de 2,56, 1,89 e 2,56 respectivamente, na descrição do problema foi proposto um fator de projeto de 2, porém, chegamos a valores próximos utilizando as estimativas iniciais e, mais importante, valores superiores a 1, para a utilização do fator de projeto 2 seriam necessario alterar as equações de coeficiente de segurança deixando explicito os valores desconhecidos, que no nosso caso foram supostos inicialmente, sendo assim, não havendo a necessidade de um chute inicial. "
+    "Para o problema proposto a solução encontrada foi supondo valores iniciais de indice de mola e o diâmetro da espira, assim, encontrando as dimensões faltantes dado o material escolhido, e com essas condições, chegamos a fatores de projeto para torção, flexão e fadiga de 2,56, 1,89 e 2,56 respectivamente. Na descrição do problema foi proposto um fator de projeto de 2, porém, chegamos a valores próximos utilizando as estimativas iniciais e, mais importante, valores superiores a 1, para a utilização do fator de projeto 2 seria necessario alterar as equações de coeficiente de segurança deixando explicito os valores desconhecidos, que no nosso caso foram supostos inicialmente, sendo assim, não havendo a necessidade de um chute inicial. "
    ]
   },
   {
