--- a/main.ipynb
+++ b/main.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Criado por: Luan Henrique de Oliveira e Paola Fernanda Monteiro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "• O mesmo deve ser entregue com todo o memorial de cálculos e justificativas de dados adotados durante a execução do mesmo.                    \n",
     "• Os dados tabelados devem ter indicação de qual tabela foram retirados.                                                                          \n",
     "• Os ganchos da mola também devem constar no projeto. "
@@ -477,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img\\ctes_material.png \"Constantes\")                                                                                       \n",
+    "!['Constantes'](img\\ctes_material.png \"Constantes\")                                                                                       \n",
     "Fonte: Design Handbook, 1987, p.19."
    ]
   },
@@ -1418,7 +1425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](img\\densidade.png \"Densidade inox\")     "
+    "!['Densidade'](img\\densidade.png \"Densidade inox\")     "
    ]
   },
   {
@@ -1769,13 +1776,6 @@
    "source": [
     "Para o problema proposto a solução encontrada foi supondo valores iniciais de indice de mola e o diâmetro da espira, assim, encontrando as dimensões faltantes dado o material escolhido, e com essas condições, chegamos a fatores de projeto para torção, flexão e fadiga de 2,56, 1,89 e 2,56 respectivamente. Na descrição do problema foi proposto um fator de projeto de 2, porém, chegamos a valores próximos utilizando as estimativas iniciais e, mais importante, valores superiores a 1, para a utilização do fator de projeto 2 seria necessario alterar as equações de coeficiente de segurança deixando explicito os valores desconhecidos, que no nosso caso foram supostos inicialmente, sendo assim, não havendo a necessidade de um chute inicial. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
