--- a/main.ipynb
+++ b/main.ipynb
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!['Constantes'](img\\ctes_material.png \"Constantes\")                                                                                       \n",
+    "![Constantes](ctes_material.png \"Constantes\")                                                                                       \n",
     "Fonte: Design Handbook, 1987, p.19."
    ]
   },
@@ -1425,7 +1425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!['Densidade'](img\\densidade.png \"Densidade inox\")     "
+    "!['Densidade'](densidade.png \"Densidade inox\")     "
    ]
   },
   {
